--- a/graphql-blog/package.json
+++ b/graphql-blog/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.35.7",
+    "dompurify": "^3.0.6",
     "graphql-request": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
